...
          }}
        />
        <Tabs.Screen
          name="record"
          options={{
            title: t('record'),
            tabBarButtonTestID: 'tab-record',
            tabBarIcon: ({ color, size }) => (
              <PenLine size={28} color={color} strokeWidth={2} />
            ),
          }}
        />
        <Tabs.Screen
...
